--- a/content/themes/devleague/index.hbs
+++ b/content/themes/devleague/index.hbs
@@ -28,19 +28,46 @@
       <section>
         <p>DevLeague and Uber are pleased to announce an exciting new partnership that we hope will contribute to the growth and exposure of the technical ecosystem here in Hawaii! It is a key initiative of ours to continue to grow and connect the developer community and provide valuable skills and opportunities to our students and the community at large.</p>
         <p>To celebrate, we are excited to announce a first of it's kind of event that brings together Uber’s expertise, along with DevLeague’s accelerated software development program in an effort to give Hawaii developers exciting new opportunities to network, collaborate and build using <a href='https://developer.uber.com/' target='_blank'>Uber’s Developer API and your imagination.</a>.</p>
-
       </section>
+      <section>
+        <h3>Title Sponsors</h3>
+        <div class="title-sponsors">
+            <ul id="sponsors-list" class="plain-list">
+              <li class="htdc-logo">
+                <img src="{{asset 'images/htdc.png'}}" alt="htdc-logo">
+              </li>
+              <li class="frontend-masters-logo">
+                <img src="{{asset 'images/logo_frontendmasters.png'}}" alt="frontendmasters-logo">
+              </li>
+              <li class="bluestartups-logo">
+                <img src="{{asset 'images/bluestartupslogo.png'}}" alt="bluestartups-logo">
+              </li>
+            </ul>
+{{!--           <span>
+            <img src="{{asset 'images/htdc.png'}}" alt="htdc-logo">
+          </span>
+          <span>
+            <img src="{{asset 'images/bluestartupslogo.png'}}" alt="bluestartups-logo">
+          </span>
+          <span>
+            
+         <img src="{{asset 'images/logo_frontendmasters.png'}}">
+          </span>
+  --}}      
+         </div>
+       </section>
       <section>
         <h3>What is the Hackathon All About?</h3>
         <p>We truly believe that community is such an important part of what we do and we really wanted to try to put together an event that would allow developers from across the Islands to come together in venues within their own communities, but also participate together as a whole.</p>
         <p>Uber engineers will be traveling from Uber HQ and along side instructors from DevLeague, will be working in conjunction to host a 36 hour challenge, designed for attendees across the state to come together in both physical and virtual spaces and celebrate the community that we have n Hawaii as a whole.</p>
         <p>Attendees will collaborate in teams, be able to interact virtually with mentors and other teams, and come together to see what kind of applications we can build using <a href='https://developer.uber.com/' target='_blank'>Uber’s Developer API</a> for some fun prizes and to see what kind of cool stuff we can come up with over a weekend.</p>
+        <p>We had the challenge of thinking how we could get attendees to come together for the event across physical borders and simulate a single physical space. Thankfully, we are able to partner with the fine folks at <a href="https://www.livecoding.tv/">Livecoding.tv</a> to connect all attendees in a virtual format.</p>
+        
         <div class="livecoding-large">
           <span>
             <img src="{{asset 'images/Livecoding.tv_logo.png'}}">
           </span>
         </div>
-        <p>We had the challenge of thinking how we could get attendees to come together for the event across physical borders and simulate a single physical space. Thankfully, we are able to partner with the fine folks at <a href="https://www.livecoding.tv/">Livecoding.tv</a> to connect all attendees in a virtual format.</p>
         <p>All attendees will be able to stream from their location, chat with hosts, mentors, share tips and tricks and just in general have a good time coding with others in an open format.</p>
         <p>We will also have guests on the main channel talking about some of the cool things that they have going on.</p>
         <div class="register">
