Change sponsor layout.

--- a/content/themes/devleague/index.hbs
+++ b/content/themes/devleague/index.hbs
@@ -30,12 +30,14 @@
         <p>To celebrate, we are excited to announce a first of it's kind of event that brings together Uber’s expertise, along with DevLeague’s accelerated software development program in an effort to give Hawaii developers exciting new opportunities to network, collaborate and build using <a href='https://developer.uber.com/' target='_blank'>Uber’s Developer API and your imagination.</a>.</p>
       </section>
       <section>
-        <h3>Title Sponsors</h3>
+        <h3>Special Thanks to our premier sponsors</h3>
         <div class="title-sponsors">
             <ul id="sponsors-list" class="plain-list">
               <li class="htdc-logo">
                 <img src="{{asset 'images/htdc.png'}}" alt="htdc-logo">
               </li>
+            </ul>
+            <ul id="sponsors-list" class="plain-list">
               <li class="frontend-masters-logo">
                 <img src="{{asset 'images/logo_frontendmasters.png'}}" alt="frontendmasters-logo">
               </li>
@@ -62,7 +64,7 @@
         <p>Uber engineers will be traveling from Uber HQ and along side instructors from DevLeague, will be working in conjunction to host a 36 hour challenge, designed for attendees across the state to come together in both physical and virtual spaces and celebrate the community that we have n Hawaii as a whole.</p>
         <p>Attendees will collaborate in teams, be able to interact virtually with mentors and other teams, and come together to see what kind of applications we can build using <a href='https://developer.uber.com/' target='_blank'>Uber’s Developer API</a> for some fun prizes and to see what kind of cool stuff we can come up with over a weekend.</p>
         <p>We had the challenge of thinking how we could get attendees to come together for the event across physical borders and simulate a single physical space. Thankfully, we are able to partner with the fine folks at <a href="https://www.livecoding.tv/">Livecoding.tv</a> to connect all attendees in a virtual format.</p>
-        
+
         <div class="livecoding-large">
           <span>
             <img src="{{asset 'images/Livecoding.tv_logo.png'}}">
