Added frito lay logo.

--- a/content/themes/devleague/index.hbs
+++ b/content/themes/devleague/index.hbs
@@ -311,6 +311,9 @@
         <li class="htdc-logo">
           <img src="{{asset 'images/htdc.png'}}" alt="htdc-logo">
         </li>
+        <li class="bluestartups-logo">
+          <img src="{{asset 'images/bluestartupslogo.png'}}" alt="bluestartups-logo">
+        </li>
         <li class="maui-economic-development-board-logo">
           <img src="{{asset 'images/maui.png'}}" alt="maui-econimic-development-board-logo">
         </li>
@@ -332,8 +335,8 @@
         <li class="boxjelly-logo">
           <img src="{{asset 'images/boxjelly_logo.png'}}" alt="boxjelly-logo">
         </li>
-        <li class="bluestartups-logo">
-          <img src="{{asset 'images/bluestartupslogo.png'}}" alt="bluestartups-logo">
+        <li class="fritolay-logo">
+          <img src="{{asset 'images/frito-lay.jpeg'}}" alt="fritolay-logo">
         </li>
       </ul>
     </secion>
