Added SVC sponsor.

--- a/content/themes/devleague/index.hbs
+++ b/content/themes/devleague/index.hbs
@@ -53,6 +53,11 @@
                 <img src="{{asset 'images/pcgamerz.png'}}" alt="pcgamerz-logo">
               </li>
             </ul>
+            <ul id="sponsors-list" class="plain-list">
+              <li class="svc-logo">
+                <img src="{{asset 'images/svc_logo.jpg'}}" alt="svc-logo">
+              </li>
+            </ul>
          </div>
        </section>
       <section>
@@ -341,11 +346,17 @@
         <li class="htdc-logo">
           <img src="{{asset 'images/htdc.png'}}" alt="htdc-logo">
         </li>
+        <li class="frontend-masters-logo">
+          <img src="{{asset 'images/logo_frontendmasters.png'}}" alt="frontendmasters-logo">
+        </li>
         <li class="bluestartups-logo">
           <img src="{{asset 'images/bluestartupslogo.png'}}" alt="bluestartups-logo">
         </li>
         <li class="cpb-logo">
           <img src="{{asset 'images/cpb_logo.jpg'}}" alt="cpb-logo">
+        </li>
+        <li class="svc-logo">
+          <img src="{{asset 'images/svc_logo.jpg'}}" alt="svc-logo">
         </li>
         <li class="maui-economic-development-board-logo">
           <img src="{{asset 'images/maui.png'}}" alt="maui-econimic-development-board-logo">
@@ -358,9 +369,6 @@
         </li>
         <li class="nalukai-foundation-logo">
           <img src="{{asset 'images/nalukai.png'}}" alt="nalukai-foundation-logo">
-        </li>
-        <li class="frontend-masters-logo">
-          <img src="{{asset 'images/logo_frontendmasters.png'}}" alt="frontendmasters-logo">
         </li>
         <li class="pcgamerz-logo">
           <img src="{{asset 'images/pcgamerz.png'}}" alt="pcgamerz-logo">
